--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
